js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-gen-await-import-source-no-new-call-expression.js
DONOTEVALUATE
(
)
;
async
function
*
f
(
)
{
await
new
import
.
source
(
'
<
module
source
>
'
)
}
